# hoy.chat

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FOLLOWUPS.md  LICENSE  PI_DESKTOP_SPEC.md  README.md  SECURITY.md  TODO.md  components.json  index.html  package.json  tsconfig.json
.claude/: settings.json
.design-sync/: NOTES.md  config.json  conventions.md  dts.tsconfig.json  fix-dts-aliases.mjs
.design-sync/previews/: AlertDialog.tsx  Badge.tsx  Button.tsx  ButtonGroup.tsx  CodeBlock.tsx  Collapsible.tsx  Command.tsx  Conversation.tsx  Dialog.tsx  DropdownMenu.tsx  Input.tsx  InputGroup.tsx  Label.tsx  Message.tsx  ModelSelector.tsx  Reasoning.tsx  ScrollArea.tsx  Select.tsx  Separator.tsx  Shimmer.tsx  Switch.tsx  Textarea.tsx  Tool.tsx  Tooltip.tsx
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: arch-repo.yml  ci.yml  deploy-site.yml  release.yml  site-deploy.yml
.hoy/plans/: HOY-317-reconcile-providers.md  HOY-329-subagent-threads-should-not-appear-in-the-home-recent-thread.md  onboarding-ui-fixes.md
.impeccable/: config.json
.impeccable/critique/: 2026-07-01T17-47-41Z__apps-site-app-page-tsx.md  2026-07-02T02-49-34Z__apps-desktop.md  2026-07-02T03-29-32Z__apps-desktop.md
apps/desktop/: DESIGN.md  PRODUCT.md  bunfig.toml  index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: alibaba_config.rs  commands.rs  events.rs  keep_awake.rs  lib.rs  mcp_config.rs  oauth.rs  pi_config.rs  reader.rs  session_transcript.rs  sidecar.rs  subagents_config.rs  usage_stats.rs  workspace.rs
apps/site/: .gitignore  DESIGN.md  PRODUCT.md  eslint.config.mjs  next.config.ts  package.json
docs/: RELEASING.md  pi-rpc-coverage.md  pi-version-bump.md
docs/plans/: HOY-188-keep-alive-findings.md  HOY-202-memory-systems-research.md  HOY-210-mcp-support-findings.md  HOY-213-plan-mode-subagents.md  HOY-213-subagent-driven-planning-findings.md  HOY-228-disk-extension-findings.md  HOY-231-phase1-implementation-plan.md  HOY-231-subagent-infrastructure-design.md  HOY-233-phase2-implementation-plan.md  HOY-233-subagents-phase2-design.md  HOY-234-phase3-implementation-plan.md  HOY-234-subagents-phase3-design.md  HOY-235-fleetview-design.md  HOY-235-fleetview-plan.md  HOY-236-subagent-thread-ux-design.md  HOY-236-subagent-thread-ux-plan.md  HOY-238-240-subagent-lifecycle-design.md  HOY-238-240-subagent-lifecycle-plan.md  HOY-245-recursive-subagents-design.md  HOY-245-recursive-subagents-plan.md  HOY-246-auto-open-opt-in-plan.md  HOY-253-ask-question.md  HOY-263-goal-mode-design.md  HOY-263-goal-mode-plan.md  HOY-265-agents-init-extension.md  HOY-276-plan-mode-evaluation.md  HOY-277-tree-navigator-design.md  HOY-278-tree-navigator-spike.md  HOY-293-ai-elements-audit.md  HOY-322-skills-ux-spike.md  (+5 more)
packaging/: README.md
scripts/: local-install.sh  set-version.sh
sidecar/: README.md  build.sh
sidecar/m0-harness/: Cargo.toml
sidecar/m0-harness/src/: main.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  pi_config.rs  reader.rs  sidecar.rs  workspace.rs
tests/: context.test.ts  drafts.test.ts  fullScreen.test.ts  images.test.ts  ipcMock.ts  mentions.test.ts  modelSelection.test.ts  panelLayout.test.ts  providerKeyRespawn.test.ts  providerMeta.test.ts  queue.test.ts  refresh.test.ts  renameThread.test.ts  steering.test.ts  teardownConfirm.test.ts  thinkingLevel.test.ts  turns.test.ts  untouchedThreads.test.ts
(+216 files in other folders)
