[package]
name = "hoy-desktop"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hoy_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local-timezone day/hour bucketing for usage stats (HOY-262). clock enables
# chrono::Local; default features are dropped to avoid the wasm bindings.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Gitignore-aware directory walk for the composer @ context picker (HOY-220).
ignore = "0.4"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
# Dev-only automation bridge for the Tauri MCP server. Registered only under
# debug_assertions (see lib.rs); the crate stays a normal dependency so its ACL
# permission (mcp-bridge:default) resolves for the capability in all profiles.
tauri-plugin-mcp-bridge = "0.2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-os = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
# Single desktop instance (HOY-192): a second launch focuses the running window
# instead of starting a duplicate. Registered first in lib.rs, desktop-only.
tauri-plugin-single-instance = "2"
# Keep the machine awake while an agent turn is streaming (HOY-188). Driven from
# a single owner thread in keep_awake.rs (Windows thread-affinity requirement).
keepawake = "0.6"

[dev-dependencies]
# test-util enables tokio's paused virtual clock (start_paused) for the
# hermetic timeout tests in sidecar.rs; kept dev-only so it never ships.
tokio = { version = "1", features = ["test-util", "macros", "rt"] }

